Atualização dos Tickets, agora temos o estilo e novo estilo de datas

--- a/public/lineup.html
+++ b/public/lineup.html
@@ -65,50 +65,55 @@
 
 	<div class="Lineup-inner">
 
-		<div class="LineupArtist">
+		<div class="LineupArtist LineupArtist--zoomBoxx">
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>24/02</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>24/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>ZOOM BOX</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>ZOOM BOXX</p>
+						<span class="">White Party</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets">
+							<li>
 
-								<span class="icon-ticket tablet-hidden"></span>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-								<span class="mobile-hidden">INGRESSOS</span>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							</a>
+									<span class="mobile-hidden">INGRESSOS</span>
 
-						</li>
+								</a>
 
-						<li>
+							</li>
 
-							<button class="Button Button--lineupShowMore">
+							<li>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								<button class="Button Button--lineupShowMore">
 
-							</button>
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
 
-						</li>
+								</button>
 
-					</ul>
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -138,50 +143,55 @@
 
 		</div>
 
-		<div class="LineupArtist">
+		<div class="LineupArtist LineupArtist--donnaBanda">
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>25/02</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>25/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>DONNA BANDA</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>DONNA BANDA</p>
+						<span class="">Abadá</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets">
+							<li>
 
-								<span class="icon-ticket tablet-hidden"></span>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-								<span class="mobile-hidden">INGRESSOS</span>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							</a>
+									<span class="mobile-hidden">INGRESSOS</span>
 
-						</li>
+								</a>
 
-						<li>
+							</li>
 
-							<button class="Button Button--lineupShowMore">
+							<li>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								<button class="Button Button--lineupShowMore">
 
-							</button>
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
 
-						</li>
+								</button>
 
-					</ul>
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -215,46 +225,51 @@
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>26/02</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>26/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>MC GUIMÊ</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>MC GUIMÊ</p>
+						<span class="">TnV Neon</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets">
+							<li>
 
-								<span class="icon-ticket tablet-hidden"></span>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-								<span class="mobile-hidden">INGRESSOS</span>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							</a>
+									<span class="mobile-hidden">INGRESSOS</span>
 
-						</li>
+								</a>
 
-						<li>
+							</li>
 
-							<button class="Button Button--lineupShowMore">
+							<li>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								<button class="Button Button--lineupShowMore">
 
-							</button>
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
 
-						</li>
+								</button>
 
-					</ul>
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -288,46 +303,51 @@
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>27/02</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>27/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>SEGUNDA ELETRONIC SUNSET</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>SEGUNDA ELETRONIC SUNSET</p>
+						<span class="">TnV Fantasy</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets">
+							<li>
 
-								<span class="icon-ticket tablet-hidden"></span>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-								<span class="mobile-hidden">INGRESSOS</span>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							</a>
+									<span class="mobile-hidden">INGRESSOS</span>
 
-						</li>
+								</a>
 
-						<li>
+							</li>
 
-							<button class="Button Button--lineupShowMore">
+							<li>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								<button class="Button Button--lineupShowMore">
 
-							</button>
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
 
-						</li>
+								</button>
 
-					</ul>
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -335,23 +355,7 @@
 
 			<div class="LineupArtist-inner">
 
-				<figure class="LineupArtist-figure">
 
-					<img src="dist/img/artists/DJ%20RENATINHO.png" alt=""/>
-
-					<figcaption>
-
-						<span><span class="nowrap">DJ RENATINHO</span> <br/>Live Drums</span>
-
-					</figcaption>
-
-				</figure>
-
-				<div class="LineupArtist-description">
-
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
-
-				</div>
 
 			</div>
 
@@ -361,46 +365,51 @@
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>27/02</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>27/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>PAGODE DO NOVA + MC DUH</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>PAGODE DO NOVA <br/> + MC DUH</p>
+						<span class="">TnV Fantasy</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets">
+							<li>
 
-								<span class="icon-ticket tablet-hidden"></span>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-								<span class="mobile-hidden">INGRESSOS</span>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							</a>
+									<span class="mobile-hidden">INGRESSOS</span>
 
-						</li>
+								</a>
 
-						<li>
+							</li>
 
-							<button class="Button Button--lineupShowMore">
+							<li>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								<button class="Button Button--lineupShowMore">
 
-							</button>
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
 
-						</li>
+								</button>
 
-					</ul>
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -434,46 +443,51 @@
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>28/02</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>28/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>DJ RENATINHO LIVE DRUMS</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>DJ RENATINHO <br/> LIVE DRUMS</p>
+						<span class="">TnV no Hawaii</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets">
+							<li>
 
-								<span class="icon-ticket tablet-hidden"></span>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-								<span class="mobile-hidden">INGRESSOS</span>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							</a>
+									<span class="mobile-hidden">INGRESSOS</span>
 
-						</li>
+								</a>
 
-						<li>
+							</li>
 
-							<button class="Button Button--lineupShowMore">
+							<li>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								<button class="Button Button--lineupShowMore">
 
-							</button>
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
 
-						</li>
+								</button>
 
-					</ul>
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
