--- a/public/index.html
+++ b/public/index.html
@@ -233,45 +233,55 @@
 
 	<div class="Lineup-inner">
 
-		<div class="LineupArtist">
+		<div class="LineupArtist LineupArtist--zoomBoxx">
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>24/02</span>
-					<span style="font-size: .875em;">White Party</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>24/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>ZOOM BOX</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>ZOOM BOXX</p>
+						<span class="">White Party</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span class="icon-ticket"></span><span class="mobile-hidden">INGRESSOS</span></a>
+							<li>
 
-						</li>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-						<li>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							<button class="Button Button--lineupShowMore">
+									<span class="mobile-hidden">INGRESSOS</span>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								</a>
 
-							</button>
+							</li>
 
-						</li>
+							<li>
 
-					</ul>
+								<button class="Button Button--lineupShowMore">
+
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
+
+								</button>
+
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -301,45 +311,55 @@
 
 		</div>
 
-		<div class="LineupArtist">
+		<div class="LineupArtist LineupArtist--donnaBanda">
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>25/02</span>
-					<span style="font-size: .875em;">Abadá</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>25/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>DONNA BANDA</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>DONNA BANDA</p>
+						<span class="">Abadá</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span class="icon-ticket"></span><span class="mobile-hidden">INGRESSOS</span></a>
+							<li>
 
-						</li>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-						<li>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							<button class="Button Button--lineupShowMore">
+									<span class="mobile-hidden">INGRESSOS</span>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								</a>
 
-							</button>
+							</li>
 
-						</li>
+							<li>
 
-					</ul>
+								<button class="Button Button--lineupShowMore">
+
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
+
+								</button>
+
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -361,7 +381,7 @@
 
 				<div class="LineupArtist-description">
 
-					<p>Cantar, dançar, atuar, transformar através da arte... Isso é Donna Banda!</p>
+					<p>Cantar, dançar, atuar, transformar através da arte... Isso é Donna Banda!. </p>
 
 				</div>
 
@@ -373,41 +393,51 @@
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>26/02</span>
-					<span style="font-size: .875em;">Neon</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>26/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>MC GUIMÊ</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>MC GUIMÊ</p>
+						<span class="">TnV Neon</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span class="icon-ticket"></span><span class="mobile-hidden">INGRESSOS</span></a>
+							<li>
 
-						</li>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-						<li>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							<button class="Button Button--lineupShowMore">
+									<span class="mobile-hidden">INGRESSOS</span>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								</a>
 
-							</button>
+							</li>
 
-						</li>
+							<li>
 
-					</ul>
+								<button class="Button Button--lineupShowMore">
+
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
+
+								</button>
+
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -437,47 +467,117 @@
 
 		</div>
 
+		<div class="LineupArtist LineupArtist--eletronicSunsect">
 
+			<div class="LineupArtistResume">
+
+				<div class="LineupArtistResume-inner">
+
+					<div class="LineupArtistResume-date">
+
+						<span>27/02</span>
+
+					</div>
+
+					<div class="LineupArtistResume-artist">
+
+						<p>SEGUNDA ELETRONIC SUNSET</p>
+						<span class="">TnV Fantasy</span>
+
+					</div>
+
+					<div class="LineupArtistResume-misc">
+
+						<ul>
+
+							<li>
+
+								<a class="Button Button--lineupResume" href="/tickets">
+
+									<span class="icon-ticket tablet-hidden"></span>
+
+									<span class="mobile-hidden">INGRESSOS</span>
+
+								</a>
+
+							</li>
+
+							<li>
+
+								<button class="Button Button--lineupShowMore">
+
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
+
+								</button>
+
+							</li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+
+
+			</div>
+
+		</div>
 
 		<div class="LineupArtist LineupArtist--pagodeDoNova">
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>27/02</span>
-					<span style="font-size: .875em;">Fantasy</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>27/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>PAGODE DO NOVA + MC DUH</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>PAGODE DO NOVA <br/> + MC DUH</p>
+						<span class="">TnV Fantasy</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span class="icon-ticket"></span><span class="mobile-hidden">INGRESSOS</span></a>
+							<li>
 
-						</li>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-						<li>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							<button class="Button Button--lineupShowMore">
+									<span class="mobile-hidden">INGRESSOS</span>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								</a>
 
-							</button>
+							</li>
 
-						</li>
+							<li>
 
-					</ul>
+								<button class="Button Button--lineupShowMore">
+
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
+
+								</button>
+
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -499,7 +599,7 @@
 
 				<div class="LineupArtist-description">
 
-					<!--<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>-->
+					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
 
 				</div>
 
@@ -511,41 +611,51 @@
 
 			<div class="LineupArtistResume">
 
-				<div class="LineupArtistResume-date">
+				<div class="LineupArtistResume-inner">
 
-					<span>28/02</span>
-					<span style="font-size: .875em;">Hawaii</span>
+					<div class="LineupArtistResume-date">
 
-				</div>
+						<span>28/02</span>
 
-				<div class="LineupArtistResume-artist">
+					</div>
 
-					<span>DJ RENATINHO LIVE DRUMS</span>
+					<div class="LineupArtistResume-artist">
 
-				</div>
+						<p>DJ RENATINHO <br/> LIVE DRUMS</p>
+						<span class="">TnV no Hawaii</span>
 
-				<div class="LineupArtistResume-misc">
+					</div>
 
-					<ul>
+					<div class="LineupArtistResume-misc">
 
-						<li>
+						<ul>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span class="icon-ticket"></span><span class="mobile-hidden">INGRESSOS</span></a>
+							<li>
 
-						</li>
+								<a class="Button Button--lineupResume" href="/tickets">
 
-						<li>
+									<span class="icon-ticket tablet-hidden"></span>
 
-							<button class="Button Button--lineupShowMore">
+									<span class="mobile-hidden">INGRESSOS</span>
 
-								<span class="icon-keyboard_arrow_down"></span>
-								<span class="icon-keyboard_arrow_up"></span>
+								</a>
 
-							</button>
+							</li>
 
-						</li>
+							<li>
 
-					</ul>
+								<button class="Button Button--lineupShowMore">
+
+									<span class="icon-keyboard_arrow_down"></span>
+									<span class="icon-keyboard_arrow_up"></span>
+
+								</button>
+
+							</li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
@@ -567,7 +677,7 @@
 
 				<div class="LineupArtist-description">
 
-					<!--<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>-->
+					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
 
 				</div>
 
