Index updated texts.

--- a/public/index.html
+++ b/public/index.html
@@ -481,8 +481,8 @@
 
 					<div class="LineupArtistResume-artist">
 
-						<p>SEGUNDA ELETRONIC SUNSET</p>
-						<span class="">TnV Fantasy</span>
+						<p>ELETRONIC SUNSET</p>
+						<span class="">Eletronic Sunset</span>
 
 					</div>
 
@@ -700,11 +700,8 @@
 				<h2 class="font-amber-a700">20 anos de Open Bar</h2>
 
 				<p>O Carnaval da região ganhou um novo capítulo em 1998, ano de fundação do bloco Tô no Vaso.</p>
-
 				<p>De lá pra cá, depois de alguns carnavais percebemos que poderíamos ser referência para os foliões da região e começamos um trabalho para trazer as melhores novidades ano a ano.</p>
-
 				<p>Para comemorar duas décadas de festa, não poderíamos deixar de fazer algo especial em 2017 e para isso teremos para cada dia de festa uma temática diferente.</p>
-
 				<p>Então prepare seu chinelo, seu abadá, acesse nossa página no <a href="https://www.facebook.com/events/150763765394621/">Facebook</a> e fique por dentro de todas as novidades que irão surgir até o começo do carnaval!</p>
 
 			</div>
@@ -736,7 +733,7 @@
 
 				<h2 class="font-amber-a700">Como funciona?</h2>
 
-				<p>O TNV se orgulha de ser uma "maratona Open Bar". São 66 HORAS de bebida liberada, divididos em 5 dias de festa, montado em um complexo que conta com lounge, banheiros, tendas, palcos, uma praia itinerante com iluminação, muita música e muita gente bonita.</p>
+				<p>O TNV se orgulha de ser uma "maratona Open Bar". São 66 HORAS de bebida liberada, divididos em 5 dias de festa, montado em um complexo que conta com lounge, banheiros, tendas, palcos, iluminação, muita música e muita gente bonita.</p>
 
 				<p>As bebidas são liberadas à partir da sexta ás 14h e indo até às 04h, seguindo assim até na terça às 0h onde a festa acaba temporiariamente até o próximo ano :D</p>
 
@@ -750,11 +747,11 @@
 
 				<h2 class="font-amber-a700">Como Participar</h2>
 
-				<p>Para curtir o melhor carnaval da região, temos duas opções: os pacotes e as diárias.</p>
+				<p>Para curtir o melhor carnaval da região, temos duas opções: <a class="font-blue-500" href="/tickets#como-comprar">os pacotes e as diárias</a>.</p>
 				<p>Os Pacotes femininos e masculinos dão direito a entrada no complexo TNV todos os cinco dias de festa e mais o abadá.</p>
 				<p>Já as diárias dão direito a entrada no complexo TNV no dia escolhido pelo folião.</p>
-				<p>Tanto os vouchers de pacotes quanto os vouchers de diárias serão trocadas pelas pulseiras de acesso à partir do dia 24/02/2017 diretamente na portaria do bloco.</p>
-				<p>Já os abadás (tanto na compra avulsa quanto de pacotes), poderão ser retirados à partir do dia 15/02/2017 nos locais credenciados ou na portaria do bloco à partir do dia 24/02/2017.</p>
+				<p>Tanto os vouchers de pacotes quanto os vouchers de diárias serão trocadas pelas pulseiras de acesso à partir do dia 23/02/2017 diretamente na portaria do bloco.</p>
+				<p>Já os abadás (tanto na compra avulsa quanto de pacotes), já podem ser retirados nos locais que você <a class="font-blue-500" href="/tickets#abadas">confere aqui</a>.</p>
 				<p>Ou seja, de pacote ou diária, sua festa vai ser garantida com muita bebida e uma estrutura de fazer Dodô e Osmar pensarem em descer do trio!</p>
 
 			</div>
@@ -811,7 +808,8 @@
 <script>
 
 	var player = new Player(document.getElementById('player'));
-	player.setVideo(new YouTubeVideo('B0gZUY2DdFw'));
+	//player.setVideo(new YouTubeVideo('B0gZUY2DdFw'));
+	player.setVideo(new YouTubeVideo('E1XvGD5IZtc'));
 
 	// add fallback functions to 'power' button (select area element)
 	player.addControlListener(player.selectAreaElement, function () {
