Alteração do local de realização do evento.

--- a/public/contato.html
+++ b/public/contato.html
@@ -144,7 +144,7 @@
 				Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green">18 9 9107 6902</a></p>
 
 				<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a> <br/>
-					<span class="Contact-complementary">Rua XV de Novembro, 29 - Palmital - São Paulo</span></p>
+					<span class="Contact-complementary">Rua Manoel Leão Rego, 527 - Palmital - São Paulo</span></p>
 
 			</div>
 
