--- a/public/tickets.html
+++ b/public/tickets.html
@@ -209,7 +209,7 @@
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
-			Local: Rua XV de Novembro, 29 - Palmital, SP</p>
+			Local: Rua Manoel Leão Rego, 527 - Palmital, SP</p>
 
 	</div>
 
@@ -798,8 +798,8 @@
 			<div class="PointTag">
 
 				<h1 class="PointTag-city">PORTARIA</h1>
-				<h2 class="PointTag-local font-amber-a700">Dub's Disco Club</h2>
-				<p class="PointTag-address">Rua XV de Novembro, 29</p>
+				<h2 class="PointTag-local font-amber-a700">Bola e Cidadania</h2>
+				<p class="PointTag-address">Rua Manoel Leão Rego, 527</p>
 				<p class="PointTag-phone">(À partir de 23/02)</p>
 
 			</div>
@@ -860,8 +860,8 @@
 			<div class="PointTag">
 
 				<h1 class="PointTag-city">PORTARIA</h1>
-				<h2 class="PointTag-local font-amber-a700">Dub's Disco Club</h2>
-				<p class="PointTag-address">Rua XV de Novembro, 29</p>
+				<h2 class="PointTag-local font-amber-a700">Bola e Cidadania</h2>
+				<p class="PointTag-address">Rua Manoel Leão Rego, 527</p>
 				<p class="PointTag-phone">(À partir de 23/02)</p>
 
 			</div>
@@ -878,7 +878,7 @@
 
 		<p class="Footer-title tk-tenby-four">Bloco Tô No Vaso 2017</p>
 
-		<p>Rua XV de Novembro, 29 - Palmital, SP</p>
+		<p>Rua Manoel Leão Rego, 527 - Palmital, SP</p>
 		<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a></p>
 		<p>Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a></p>
 		<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
