--- a/public/lineup.html
+++ b/public/lineup.html
@@ -221,7 +221,7 @@
 
 		</div>
 
-		<div class="LineupArtist LineupArtist--mcMigue is-showingMore">
+		<div class="LineupArtist LineupArtist--mcMigue">
 
 			<div class="LineupArtistResume">
 
@@ -299,7 +299,7 @@
 
 		</div>
 
-		<div class="LineupArtist LineupArtist--eletronicSunsect">
+		<div class="LineupArtist LineupArtist--eletronicSunset is-showingMore">
 
 			<div class="LineupArtistResume">
 
@@ -355,7 +355,77 @@
 
 			<div class="LineupArtist-inner">
 
+				<figure class="LineupArtist-figure">
 
+					<img src="dist/img/artistsEletronicSunset/WILL.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">WILL</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/TARU.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">TARU</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/FEL%20MARTINS.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">FEL <br/>MARTINS</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/QWERTY.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">QWERT</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/X-ALL.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">X-ALL</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/MD&MA.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">MD&MA</span></span>
+
+					</figcaption>
+
+				</figure>
 
 			</div>
 
@@ -429,12 +499,6 @@
 
 				</figure>
 
-				<div class="LineupArtist-description">
-
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
-
-				</div>
-
 			</div>
 
 		</div>
@@ -506,12 +570,6 @@
 					</figcaption>
 
 				</figure>
-
-				<div class="LineupArtist-description">
-
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
-
-				</div>
 
 			</div>
 
