--- a/public/index.html
+++ b/public/index.html
@@ -389,7 +389,7 @@
 
 		</div>
 
-		<div class="LineupArtist LineupArtist--mcMigue is-showingMore">
+		<div class="LineupArtist LineupArtist--mcMigue">
 
 			<div class="LineupArtistResume">
 
@@ -467,7 +467,7 @@
 
 		</div>
 
-		<div class="LineupArtist LineupArtist--eletronicSunsect">
+		<div class="LineupArtist LineupArtist--eletronicSunset is-showingMore">
 
 			<div class="LineupArtistResume">
 
@@ -482,7 +482,7 @@
 					<div class="LineupArtistResume-artist">
 
 						<p>ELETRONIC SUNSET</p>
-						<span class="">Eletronic Sunset</span>
+						<span class="">TnV Fantasy</span>
 
 					</div>
 
@@ -523,7 +523,77 @@
 
 			<div class="LineupArtist-inner">
 
+				<figure class="LineupArtist-figure">
 
+					<img src="dist/img/artistsEletronicSunset/WILL.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">WILL</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/TARU.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">TARU</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/FEL%20MARTINS.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">FEL <br/>MARTINS</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/QWERTY.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">QWERT</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/X-ALL.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">X-ALL</span></span>
+
+					</figcaption>
+
+				</figure>
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artistsEletronicSunset/MD&MA.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">MD&MA</span></span>
+
+					</figcaption>
+
+				</figure>
 
 			</div>
 
@@ -597,12 +667,6 @@
 
 				</figure>
 
-				<div class="LineupArtist-description">
-
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
-
-				</div>
-
 			</div>
 
 		</div>
@@ -674,12 +738,6 @@
 					</figcaption>
 
 				</figure>
-
-				<div class="LineupArtist-description">
-
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
-
-				</div>
 
 			</div>
 
