Adição de tela de testes para apresentação dos pedidos Adição de tela para limpar dados vazios do banco de dados (CUIDADO)

--- a/public/index.html
+++ b/public/index.html
@@ -389,7 +389,7 @@
 
 		</div>
 
-		<div class="LineupArtist LineupArtist--mcMigue">
+		<div class="LineupArtist LineupArtist--mcMigue is-showingMore">
 
 			<div class="LineupArtistResume">
 
@@ -467,7 +467,7 @@
 
 		</div>
 
-		<div class="LineupArtist LineupArtist--eletronicSunset is-showingMore">
+		<div class="LineupArtist LineupArtist--eletronicSunset">
 
 			<div class="LineupArtistResume">
 
