--- a/public/administracao/acesso.html
+++ b/public/administracao/acesso.html
@@ -6,14 +6,15 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 
-	<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
 	<script>
+		// Initialize Firebase
 		var config = {
-			apiKey: "AIzaSyBXspo0nGSMVHqMRkcfjT1NyErFW2kGTsM",
-			authDomain: "tonovaso-com-br.firebaseapp.com",
-			databaseURL: "https://tonovaso-com-br.firebaseio.com",
-			storageBucket: "",
-			messagingSenderId: "101212266019"
+			apiKey: "AIzaSyBK8q18qHSR0toQutQGp_1wAcfzyfC0pEI",
+			authDomain: "dalia-tonovaso-com-br.firebaseapp.com",
+			databaseURL: "https://dalia-tonovaso-com-br.firebaseio.com",
+			storageBucket: "dalia-tonovaso-com-br.appspot.com",
+			messagingSenderId: "737535874060"
 		};
 		firebase.initializeApp(config);
 	</script>
@@ -26,15 +27,32 @@
 			callbacks: {
 				'signInSuccess': function(user, credential, redirectUrl) {
 
-					firebase.database().ref('admins/' + user.uid).set({
-						'uid': user.uid,
-						'datetime': new Date().toLocaleString()
+					var userRef = firebase.database().ref('/users/u' + user.uid);
+					userRef.once('value').then(function(snapshot) {
+
+						if(snapshot.exists() && snapshot.child('role').val() == "admin") {
+
+							var uid = snapshot.child('uid').val();
+							var adminRef = firebase.database().ref('admins/a' + uid);
+
+							adminRef.once('value').then(function(snapshot) {
+								if(snapshot.exists())
+									window.location.href = uiConfig.signInSuccessUrl;
+							}).catch(function(err) {
+								console.log('Você não tem permissão de administrador: ' + err);
+							});
+
+						} else {
+							console.log('Nível de permissão insuficiente');
+						}
+
+					}).catch(function(err) {
+						console.log('Algo de errado não está certo: ' + err);
 					});
 
-					return true;
 				}
 			},
-			signInSuccessUrl: '/administracao/retirada',
+			signInSuccessUrl: '/administracao/',
 			signInOptions: [
 				firebase.auth.FacebookAuthProvider.PROVIDER_ID
 			],
@@ -48,7 +66,7 @@
 
 		} else {
 
-			window.location.href = "/administracao/retirada";
+			window.location.href = "/administracao/";
 		}
 
 	</script>
