Atualizando período de retirada dos abadás.

--- a/public/tickets.html
+++ b/public/tickets.html
@@ -800,7 +800,7 @@
 				<h1 class="PointTag-city">PORTARIA</h1>
 				<h2 class="PointTag-local font-amber-a700">Bola e Cidadania</h2>
 				<p class="PointTag-address">Rua Manoel Leão Rego, 527</p>
-				<p class="PointTag-phone">(À partir de 23/02)</p>
+				<p class="PointTag-phone">(Das 9h às 22h)</p>
 
 			</div>
 
